Avoid creating StoragePartitions unnecessarily

Instead check several conditions earlier to avoid getting (and thus creating)
StoragePartitions that are never used.

Bug: 762960
Change-Id: I57055c19f485be706485477125d1434e5ae99181