content/browser/background_fetch/background_fetch_context.h
@@ -17,10 +17,6 @@
 #include "content/public/browser/browser_thread.h"
 #include "third_party/WebKit/public/platform/modules/background_fetch/background_fetch.mojom.h"
 
-namespace net {
-class URLRequestContextGetter;
-}
-
 namespace url {
 class Origin;
 }
@@ -52,11 +48,6 @@ class CONTENT_EXPORT BackgroundFetchContext
   BackgroundFetchContext(
       BrowserContext* browser_context,
       const scoped_refptr<ServiceWorkerContextWrapper>& service_worker_context);
-
-  // Finishes initializing the Background Fetch context on the IO thread by
-  // setting the |request_context_getter|.
-  void InitializeOnIOThread(
-      scoped_refptr<net::URLRequestContextGetter> request_context_getter);
 
   // Starts a Background Fetch for the |registration_id|. The |requests| will be
   // asynchronously fetched. The |callback| will be invoked when the fetch has
@@ -117,8 +108,6 @@ class CONTENT_EXPORT BackgroundFetchContext
 
   // |this| is owned, indirectly, by the BrowserContext.
   BrowserContext* browser_context_;
-
-  scoped_refptr<net::URLRequestContextGetter> request_context_getter_;
 
   std::unique_ptr<BackgroundFetchDataManager> data_manager_;
   std::unique_ptr<BackgroundFetchEventDispatcher> event_dispatcher_;
